--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <div id="app"></div>
 <script type="module" src="/src/main.js"></script>
